--- a/Info/contacts.html
+++ b/Info/contacts.html
@@ -10,7 +10,9 @@
 <body>
     <a href="../index.html">Главная</a>
     <a href="../Info/catalog.html">Каталог</a>
-    <a href="../Info/contacts.html">Контакты</a>
+    <a href="../Info/contacts.html">Контакты</a><br><br>
+    <img src="../img/site.jpg" alt="Заходите"><br>
+    <a href="https://www.freepik.com/search?format=search&orientation=portrait&query=products  ">Заходите к нам!</a>
 </body>
 
 </html>
