--- a/Info/contacts.html
+++ b/Info/contacts.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <a href="../index.html">Главная</a>
-    <a href="../Info/catalog.html">Каталог</a>
-    <a href="../Info/contacts.html">Контакты</a><br><br>
-    <img src="../img/site.jpg" alt="Заходите"><br>
-    <a href="https://www.freepik.com/search?format=search&orientation=portrait&query=products  ">Заходите к нам!</a>
+    <a class="ref" href="../index.html">Главная</a>
+    <a class="ref" href="catalog.html">Каталог</a>
+    <a class="ref" href="contacts.html">Контакты</a><br><br>
+    <img width="500px" src="../img/site.jpg" alt="Заходите"><br>
+    <a class="ref" href="https://www.freepik.com/search?format=search&orientation=portrait&query=products  ">Заходите к нам!</a>
 </body>
 
 </html>
